app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
}

.custom-gradient-border {
  border-width: 1px;
  border-image-source: linear-gradient(
    180deg,
    #7878ff 0%,
    rgba(120, 120, 255, 0) 100%
  );
  border-image-slice: 1;
}

@supports (color: color(display-p3 0.471 0.471 0.98)) {
  .custom-gradient-border {
    border-image-source: linear-gradient(
      180deg,
      color(display-p3 0.471 0.471 0.98) 0%,
      color(display-p3 0.471 0.471 0.98 / 0) 100%
    );
  }
}

/* :root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
} */

